# PROJECT-VICTUS

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  agent.py  auth.py  database.py  main.py  models.py  pyproject.toml  tools.py
static/: index.html  script.js  style.css
